# Kernex

./: .gitignore  CODE_OF_CONDUCT.md  COMPANY.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/kernex-audit/: Cargo.toml
crates/kernex-audit/src/: candidate.rs  error.rs  lib.rs  observation.rs  sensitive.rs  session.rs
crates/kernex-cli/: Cargo.toml
crates/kernex-cli/src/: cli.rs  main.rs  output.rs  policy_io.rs
crates/kernex-cli/src/commands/: audit.rs  diff.rs  init.rs  mod.rs  run.rs  status.rs
crates/kernex-core/: Cargo.toml
crates/kernex-core/src/: backend.rs  dedupe.rs  error.rs  evaluator.rs  lib.rs  runner.rs  session.rs
crates/kernex-ipc/: Cargo.toml
crates/kernex-ipc/src/: codec.rs  error.rs  lib.rs  message.rs  socket.rs
crates/kernex-linux/: Cargo.toml
crates/kernex-linux/src/: backend.rs  error.rs  landlock.rs  lib.rs  seccomp.rs  spawn.rs  tty.rs
crates/kernex-linux/tests/: integration.rs
crates/kernex-macos/: Cargo.toml
crates/kernex-macos/src/: backend.rs  error.rs  es_client.rs  lib.rs  policy.rs  spawn.rs
crates/kernex-macos/tests/: integration.rs
crates/kernex-policy/: Cargo.toml
crates/kernex-policy/src/: diff.rs  error.rs  lib.rs  score.rs  types.rs  validate.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: enforcement.rs  json_schema.rs  lifecycle.rs  scoring.rs
