[package]
name = "kernex-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Unix Domain Socket IPC between the Kernex CLI and core engine"

[dependencies]
thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true, features = ["net", "io-util", "rt", "macros"] }
tracing    = { workspace = true }
tempfile   = { workspace = true }

[dev-dependencies]
nix   = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
